JEAP-5984: The Message Exchange Service now supports multiple media types for message payloads